# TP-C-SEMESTR1

./: .gitignore  README.md
.circleci/: config.yml
iz-1/: CMakeLists.txt
iz-1/Google_tests/: AbsoluteDateTest.cpp  CMakeLists.txt  ConverterTests.cpp
iz-1/include/: cl_console.h  logic.h  my_math.h
iz-1/src/: cl_console.c  logic.c  main.c  my_math.c
iz-2/: CMakeLists.txt  main.c
iz-2/include/: complex_matrix.h  matrix_member.h  matrix_memory.h  naive_matrix.h  reflection_matrix.h
iz-2/include/matrix_interface/: reflection_matrix.h
iz-2/src/: complex_matrix.c  interaction_user.c  matrix_member.c  matrix_memory.c  naive_matrix.c
iz-2/unit_tests/: stress_test.cpp  tests.cpp
iz-2/unit_tests/incorrect_files/: broken_matrix.input  broken_matrix.output
iz-2/unit_tests/test_files/: small_matrix.input  small_matrix.output
